src/test/ui/asm/named-asm-labels.stderr
error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:11:15
   |
LL |         asm!("bar: nop");
   |               ^^^
   |
   = note: `#[deny(named_asm_labels)]` on by default
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:14:15
   |
LL |         asm!("abcd:");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:17:15
   |
LL |         asm!("foo: bar1: nop");
   |               ^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:17:20
   |
LL |         asm!("foo: bar1: nop");
   |                    ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:22:15
   |
LL |         asm!("foo1: nop", "nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:23:15
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:23:21
   |
LL |         asm!("foo2: foo3: nop", "nop");
   |                     ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:26:22
   |
LL |         asm!("nop", "foo4: nop");
   |                      ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:27:15
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:27:28
   |
LL |         asm!("foo5: nop", "foo6: nop");
   |                            ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:32:15
   |
LL |         asm!("foo7: nop; foo8: nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:32:26
   |
LL |         asm!("foo7: nop; foo8: nop");
   |                          ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:35:15
   |
LL |         asm!("foo9: nop; nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:36:20
   |
LL |         asm!("nop; foo10: nop");
   |                    ^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:39:15
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:39:27
   |
LL |         asm!("bar2: nop\n bar3: nop");
   |                           ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:42:15
   |
LL |         asm!("bar4: nop\n nop");
   |               ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:43:21
   |
LL |         asm!("nop\n bar5: nop");
   |                     ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:44:21
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                     ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:44:27
   |
LL |         asm!("nop\n bar6: bar7: nop");
   |                           ^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:51:13
   |
LL |             blah2: nop
   |             ^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:52:13
   |
LL |             blah3: nop
   |             ^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:60:19
   |
LL |             nop ; blah4: nop
   |                   ^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:74:15
   |
LL |         asm!("blah1: 2bar: nop");
   |               ^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:77:15
   |
LL |         asm!("def: def: nop");
   |               ^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:78:15
   |
LL |         asm!("def: nop\ndef: nop");
   |               ^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:79:15
   |
LL |         asm!("def: nop; def: nop");
   |               ^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:87:15
   |
LL |         asm!("fooo\u{003A} nop");
   |               ^^^^^^^^^^^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:88:15
   |
LL |         asm!("foooo\x3A nop");
   |               ^^^^^^^^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:91:15
   |
LL |         asm!("fooooo:\u{000A} nop");
   |               ^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:92:15
   |
LL |         asm!("foooooo:\x0A nop");
   |               ^^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:96:14
   |
LL |         asm!("\x41\x42\x43\x3A\x20\x6E\x6F\x70");
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:107:13
   |
LL |             ab: nop // ab: does foo
   |             ^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:119:14
   |
LL |         asm!(include_str!("named-asm-labels.s"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

warning: do not use named labels in inline assembly
  --> $DIR/named-asm-labels.rs:129:19
   |
LL |             asm!("warned: nop");
   |                   ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/named-asm-labels.rs:127:16
   |
LL |         #[warn(named_asm_labels)]
   |                ^^^^^^^^^^^^^^^^
   = help: only GAS local labels of the form `N:` where N is a number may be used in inline asm
   = note: see the asm section of the unstable book <https://doc.rust-lang.org/nightly/unstable-book/library-features/asm.html#labels> for more information

error: aborting due to 34 previous errors; 1 warning emitted

